# DataScienceDH

./: README.md  pyproject.toml
clase_02/: 1_repaso_python.ipynb  clase02.ipynb  presentacion_clase_02.ipynb
clase_03/: 1_numpy.ipynb  3_enunciado_checkpoint.ipynb  5_enunciado_desafio.ipynb  6_desafio_solucion.ipynb  presentacion_clase_03.ipynb  pruebas.ipynb
clase_03/clase/: Modelo.ipynb
clases/clase_02/: clase02.ipynb
clases/clase_03/: 2_numpy_vectorizacion.ipynb  4_checkpoint_video.ipynb
clases/clase_04/: 1_estadistica.ipynb  2_enunciado_checkpoint.ipynb  3_checkpoint_video.ipynb  4_enunciado_desafio.ipynb  5_desafio_solucion.ipynb  presentacion_clase_04.ipynb
common/: 0_notebooks_base_setup.py
tests/: test_dh.py
