[tool.poetry]
name = "DH"
version = "0.1.0"
description = ""
authors = ["Alberto Paparelli <alberto@paparelli.com.ar>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyterlab = "2.2.6"
pandas = "1.1.5"
scipy = "1.9.0"
pandas-datareader = "0.9.0"
nltk = "3.5.0"
scikit-learn = "^1.1.2"
xlrd = "^2.0.1"
Unidecode = "^1.3.4"
pydotplus = "^2.0.2"
Flask = "^2.2.2"
statsmodels = "^0.13.2"
psutil = "^5.9.1"
chardet = "^5.0.0"
ipywidgets = "^7.7.1"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
bokeh = "^2.4.3"
plotly = "^5.10.0"
chart-studio = "^1.1.0"
nodejs = "^0.1.1"
catboost = "^1.0.6"
scikit-plot = "^0.3.7"
lime = "^0.2.0"
imbalanced-learn = "^0.9.1"
google-cloud-bigquery = "2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
